Replace javafx with tauri as of to optimise in terms of memory usage